--- a/In_class_assignment.ipynb
+++ b/In_class_assignment.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM6UQymtxmv4e+F7ButxH2W",
+      "authorship_tag": "ABX9TyMDv3ZY1yEP1/1GpssFXDU5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -66,6 +66,39 @@
         "print(f\"Taxes: {taxes}$\")\n",
         "print(f\"Net Income: {net}$\")\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num1 = float(input(\"Enter first number: \"))\n",
+        "num2 = float(input(\"Enter second number: \"))\n",
+        "op = input(\"Choose numerical operator: \")\n",
+        "\n",
+        "if op == \"+\":\n",
+        "    res = num1 + num2\n",
+        "elif op == \"-\":\n",
+        "    res = num1 - num2\n",
+        "elif op == \"*\":\n",
+        "    res = num1 * num2\n",
+        "elif op == \"/\":\n",
+        "    res = num1 / num2\n",
+        "elif op == \"//\":\n",
+        "    res = num1 // num2\n",
+        "elif op == \"**\":\n",
+        "    res = num1 ** num2\n",
+        "elif op == \"%\":\n",
+        "    res = num1 % num2\n",
+        "else:\n",
+        "    print(\"Invalid operation\")\n",
+        "    res = None\n",
+        "\n",
+        "print(f\"Result: {res}\")\n"
+      ],
+      "metadata": {
+        "id": "VTgI0wj7MB9A"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
