--- a/In_class_assignment.ipynb
+++ b/In_class_assignment.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMDv3ZY1yEP1/1GpssFXDU5",
+      "authorship_tag": "ABX9TyO1G8sczcyA2M8iWOl6/Y60",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -99,6 +99,163 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for hour in range(1, 9):\n",
+        "    fee = 5 + 2.5 * hour\n",
+        "    if fee < 10:\n",
+        "        fee = 10.0\n",
+        "    elif fee > 20:\n",
+        "        fee = 20.0\n",
+        "    print(hour, fee)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "w90rHqlv37xm",
+        "outputId": "9ae5fc5e-54dd-4795-f194-f3a21b95ee5f"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1 10.0\n",
+            "2 10.0\n",
+            "3 12.5\n",
+            "4 15.0\n",
+            "5 17.5\n",
+            "6 20.0\n",
+            "7 20.0\n",
+            "8 20.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ticket = 20\n",
+        "init_attendees = 20\n",
+        "fixed_cost = 200\n",
+        "\n",
+        "for ad in range (0, 201,25):\n",
+        "    revenue = (init_attendees + 2 * round(ad ** 0.5)) * 10\n",
+        "    costs = fixed_cost + ad\n",
+        "    profit = revenue - costs\n",
+        "    print(ad, profit)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RrffNeF44DUW",
+        "outputId": "825822ea-a487-40e0-8f1a-a043bb30bcb0"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0 0\n",
+            "25 75\n",
+            "50 90\n",
+            "75 105\n",
+            "100 100\n",
+            "125 95\n",
+            "150 90\n",
+            "175 85\n",
+            "200 80\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "hour = 1\n",
+        "while hour < 9:\n",
+        "    fee = 5 + 2.5 * hour\n",
+        "    if fee < 10:\n",
+        "        fee = 10.0\n",
+        "    elif fee > 20:\n",
+        "        fee = 20.0\n",
+        "\n",
+        "    print(hour, fee)\n",
+        "    hour += 1"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CTqe-oHf4f1r",
+        "outputId": "b418427b-3207-4f5a-8d2a-a54e8b0222b5"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1 10.0\n",
+            "2 10.0\n",
+            "3 12.5\n",
+            "4 15.0\n",
+            "5 17.5\n",
+            "6 20.0\n",
+            "7 20.0\n",
+            "8 20.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import math\n",
+        "\n",
+        "ticket = 20\n",
+        "init_attendees = 20\n",
+        "fixed_cost = 200\n",
+        "\n",
+        "ad = 0\n",
+        "while ad < 201:\n",
+        "    revenue = (init_attendees + 2 * round(math.sqrt(ad))) * 10\n",
+        "    costs = fixed_cost + ad\n",
+        "    profit = revenue - costs\n",
+        "    print(ad, profit)\n",
+        "    ad += 25"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YGOnE-8m4r0l",
+        "outputId": "ea8d9213-8210-49dd-da36-acbe614ce65f"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0 0\n",
+            "25 75\n",
+            "50 90\n",
+            "75 105\n",
+            "100 100\n",
+            "125 95\n",
+            "150 90\n",
+            "175 85\n",
+            "200 80\n"
+          ]
+        }
+      ]
     }
   ]
 }
