--- a/In_class_assignment.ipynb
+++ b/In_class_assignment.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO1G8sczcyA2M8iWOl6/Y60",
+      "authorship_tag": "ABX9TyMEcIzDFGo8h/Q6EHT/G8OA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -196,7 +196,7 @@
         "id": "CTqe-oHf4f1r",
         "outputId": "b418427b-3207-4f5a-8d2a-a54e8b0222b5"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -238,7 +238,7 @@
         "id": "YGOnE-8m4r0l",
         "outputId": "ea8d9213-8210-49dd-da36-acbe614ce65f"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -253,6 +253,59 @@
             "150 90\n",
             "175 85\n",
             "200 80\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import random\n",
+        "\n",
+        "play = input(\"Do you want to play? (y/n): \").lower()\n",
+        "\n",
+        "while play == \"y\":\n",
+        "    p_move = input(\"Choose between rock, paper, scissors: \").lower()\n",
+        "    c_move = random.choice(['rock', 'paper', 'scissors'])\n",
+        "\n",
+        "    print(f\"Player move: {p_move}\")\n",
+        "    print(f\"Computer move: {c_move}\")\n",
+        "\n",
+        "    if p_move == c_move:\n",
+        "        print(\"Draw\")\n",
+        "    elif ((p_move == \"rock\" and c_move == \"scissors\") or\n",
+        "          (p_move == \"scissors\" and c_move == \"paper\") or\n",
+        "          (p_move == \"paper\" and c_move == \"rock\")):\n",
+        "        print(\"Player wins!\")\n",
+        "    else:\n",
+        "        print(\"Computer wins!\")\n",
+        "\n",
+        "    play = input(\"Do you want to play again? (y/n): \").lower()\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9YE4FPnwJVw_",
+        "outputId": "4f5a7c86-45ef-4dea-d848-263294d8ef44"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Do you want to play? (y/n): y\n",
+            "Choose between rock, paper, scissors: rock\n",
+            "Player move: rock\n",
+            "Computer move: paper\n",
+            "Computer wins!\n",
+            "Do you want to play again? (y/n): y\n",
+            "Choose between rock, paper, scissors: scissors\n",
+            "Player move: scissors\n",
+            "Computer move: rock\n",
+            "Computer wins!\n",
+            "Do you want to play again? (y/n): n\n"
           ]
         }
       ]
